[package]
name = "devis"
version = "0.1.0"
edition = "2021"
authors = ["Devin Ward <devin@hey.com>"]

readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive", "string"] }
color-eyre = "0.6"
dirs = "6.0.0"
indicatif = "0.17.11"
serde = { version = "~1.0", features = ["derive"] }
toml = "0.8.20"
